--- a/m5stack-atom-echo/m5stack-atom-echo.yaml
+++ b/m5stack-atom-echo/m5stack-atom-echo.yaml
@@ -65,7 +65,7 @@ media_player:
     name: None
     id: echo_media_player
     announcement_pipeline:
-      speaker: prlmnt_speaker
+      speaker: echo_speaker
       format: WAV
     codec_support_enabled: false
     buffer_size: 6000
@@ -122,11 +122,15 @@ voice_assistant:
         green: 100%
         brightness: 100%
         effect: none
+  on_tts_end:
     - homeassistant.service:
-        service: tts.piper
-        data:
-          entity_id: media_player.music_assistant
-          message: !lambda 'return x;'
+      service: media_player.play_media
+      data:
+        entity_id: media_player.music_assistant
+        media_content_id: !lambda 'return x;'
+        media_content_type: audio/wav
+        announce: "true"
+
   on_end:
     # Handle the "nevermind" case where there is no announcement
     - wait_until:
