--- a/m5stack-atom-echo/m5stack-atom-echo.yaml
+++ b/m5stack-atom-echo/m5stack-atom-echo.yaml
@@ -97,7 +97,7 @@ voice_assistant:
     microphone: echo_microphone
     channels: 0
     gain_factor: 4
-  media_player: echo_media_player
+  # media_player: echo_media_player
   noise_suppression_level: 2
   auto_gain: 31dBFS
   on_listening:
